Fix header on Problem and Solutions pages
Two of the Sources links were too long, so I removed everything after the  # on those two links.

--- a/styles/header.css
+++ b/styles/header.css
@@ -161,7 +161,7 @@ input[type="submit"]:hover {
 }
 
 .seventyvw {
-    width: 70%;
+    width: 70vw;
 }
 
 .main-heading {
